# Segfault_Platformer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: config.json  levelschema.json  testlevel.json
assets/levels/: levelschema.json  testlevel.json
cmake/: FindSFML.cmake  SFMLConfigVersion.cmake  SFMLSharedTargets-relwithdebinfo.cmake
src/: GameObject.cpp  GameObject.hpp  Platform.cpp  Platform.hpp  PlatformerGame.cpp  PlatformerGame.hpp  Player.cpp  Player.hpp  configloader.cpp  configloader.hpp  gameobjectfactory.cpp  gameobjectfactory.hpp  jsonHelper.cpp  jsonHelper.hpp  levelloader.cpp  levelloader.hpp  main.cpp  physics.cpp  physics.hpp
tests/: tests.cpp
